--- a/index.html
+++ b/index.html
@@ -23,19 +23,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" href="#">Who am I?</a>
+          <a class="nav-link" href="#skills">Skills</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">My education</a>
+          <a class="nav-link" href="#education">My Education</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Certifications</a>
+          <a class="nav-link" href="#certificates">Other certificated</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Skills</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact me</a>
+          <a class="nav-link" href="#contact">Contact me</a>
         </li>
       </ul>
     </div>
