--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Diana Edreva | CV  </title>
+  <title>Diana Edreva | CV </title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,7 +29,10 @@
           <a class="nav-link" href="#education">My Education</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#certificates">Other certificated</a>
+          <a class="nav-link" href="#certificates">Other certificates</a>
+        </li>
+                <li class="nav-item">
+          <a class="nav-link" href="#experience">Experience</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#contact">Contact me</a>
@@ -92,23 +95,33 @@
     <h2>Education</h2>
     <hr>
     <br>
-          <h4><strong>2017-2021</strong> Bachelor degree in <em>Information Security</em> at <a href="https://www.unibit.bg/en">ULSIT</a></h4>
-    <p>
-
-      <img src="images/computer.png"  width="150px;" id="compimage" alt="a computer image" >
-      Studied fundamental and specialized disciplines such as linear algebra, programming, mathematical analysis, system analysis, information management, foundations of computer systems, theoretical foundations of informatics, information systems, computer networks and communications, methodological foundations of information security, cryptography and cryptology, protection of information in computers and networks, information security on the Internet, protection of classified information, protection of intellectual property, normative and legal foundations of information security, risk management and more.
-</p>
-<br/>
-      <h4><strong>2021-2022</strong> Masters degree in <em>Digital Forensics and Cybersecurity</em> at <a href="https://www.unibit.bg/en">ULSIT</a> 
+          <h4><strong>2021-2022</strong> Masters degree in <em>Digital Forensics and Cybersecurity</em> at <a href="https://www.unibit.bg/en">ULSIT</a> 
 
   </h4>
 <p>
-
+      <img src="images/computer.png"  width="150px;" id="compimage" alt="a computer image" >
       Studied cybersecurity fundamentals as well as the skills to recognise multiple key
       attacks like OWASP, IoT hacking, APT, Fileless malware, Web API threats,
       Webhooks, Web Shell, OT Attacks, Cloud Attacks, AI, ML and many more; asymmetrical and
       symmetric cryptography;cryptanalysis; analysis and breakthrough in cryptography; overview of algorithms such as, algorithms for
       hashing including MD5, MD6, SHA, Gost, RIPMD 256 and others;
+
+    </p>
+
+    <br /><br>
+    <h4><strong>2017-2021</strong> Bachelor degree in <em>Information Security</em> at <a href="https://www.unibit.bg/en">ULSIT</a></h4>
+    <p>
+
+      Studied fundamental and specialized disciplines such as linear algebra, programming, mathematical analysis, system analysis, information management, foundations of computer systems, theoretical foundations of informatics, information systems, computer networks and communications, methodological foundations of information security, cryptography and cryptology, protection of information in computers and networks, information security on the Internet, protection of classified information, protection of intellectual property, normative and legal foundations of information security, risk management and more.
+</p>
+<br/><br>
+
+
+          <h4><strong>2009-2014</strong> Professional degree in Computer Graphics and design </em> at <a href="https://www.npgpf.bg/en/">NPHPP</a> 
+
+  </h4>
+<p>
+Studied specialised disciplines such as photography, graphic design, web design, polygraphy, 3D animation, etc. Taken active part in national photography and graphics design exhibitions as the school representative. Regularly had publications in different Bulgarian media while in high school, and in the school newspaper in the field of Literature.
 
     </p>
 
@@ -155,8 +168,31 @@
     
   </div>
 </div>
+<div  id="experience">
+  <br><br>
+    <h2>Work experience:</h2>
+        <hr>
+
+<div class="container">
+   <div class="left-content">
+      <p>November 2021-Present <br> Webiko.eu - Founder and developer</p>
+      <p>January-December 2017<br> Team.Blue - Migration engineer</p>
+      <p>June 2015-December 2016 <br> Paragon Internet Group - Senior Technical Support Engineer</p>
+      <p>June 2014-Jully 2015<br>Technical Concierge & Support Level 1</p>
+   </div>
+   <div class="right-content">
+      <p>October 2021-Present <br> Team.Blue - Platform engineer trainee</p>
+      <p>December 2017-Present <br> Team.Blue - Team Lead migration team</p>
+      <p>November 2016-2017<br> Progressbg.net - Part-time lecturer for the following classes: Front End Development, Content Management Systems,  Computer graphics and design</p>
+      <p>August 2015-May 2016 <br> Paragon Internet Group - Team Leader of Technical Concierge Team</p>
+   </div>
+
+</div>
+
+</div>
 
 <div class="container-fluid " id = "contact"> 
+  <br><br>
   <h2>Contact me</h2>
 
   <h4>You can always send me an email or find me at my social accounts </h4>
