--- a/index.html
+++ b/index.html
@@ -175,16 +175,16 @@ Studied specialised disciplines such as photography, graphic design, web design,
 
 <div class="container">
    <div class="left-content">
-      <p>November 2021-Present <br> Webiko.eu - Founder and developer</p>
-      <p>January-December 2017<br> Team.Blue - Migration engineer</p>
-      <p>June 2015-December 2016 <br> Paragon Internet Group - Senior Technical Support Engineer</p>
-      <p>June 2014-Jully 2015<br>Technical Concierge & Support Level 1</p>
+     <p><b>November 2021-Present </b><br> Webiko.eu - Founder and developer</p>
+     <p><b>January-December 2017</b><br> Team.Blue - Migration engineer</p>
+     <p><b>June 2015-December 2016 </b><br> Paragon Internet Group - Senior Technical Support Engineer</p>
+     <p><b>June 2014-Jully 2015</b><br>Paragon Internet Group - Technical Concierge & Support Level 1</p>
    </div>
    <div class="right-content">
-      <p>October 2021-Present <br> Team.Blue - Platform engineer trainee</p>
-      <p>December 2017-Present <br> Team.Blue - Team Lead migration team</p>
-      <p>November 2016-2017<br> Progressbg.net - Part-time lecturer for the following classes: Front End Development, Content Management Systems,  Computer graphics and design</p>
-      <p>August 2015-May 2016 <br> Paragon Internet Group - Team Leader of Technical Concierge Team</p>
+     <p><b>October 2021-Present </b><br> Team.Blue - Platform engineer trainee</p>
+     <p><b>December 2017-Present </b><br> Team.Blue - Team Lead migration team</p>
+     <p><b>November 2016-2017</b><br> Progressbg.net - Part-time lecturer for the following classes: Front End Development, Content Management Systems,  Computer graphics and design</p>
+     <p><b>August 2015-May 2016 </b><br> Paragon Internet Group - Team Leader of Technical Concierge Team</p>
    </div>
 
 </div>
