--- a/index.html
+++ b/index.html
@@ -44,12 +44,13 @@
   <div class="row">
   <div id="spacer">
   </div>
-<div class="col-md-2 offset-md-1">
+<div class="col-lg-5 col-sm-12">
   <div class="p-3 mb-3 rounded">
     <img id="profile" src="https://media-exp1.licdn.com/dms/image/C4E03AQGXBAJUkipkSg/profile-displayphoto-shrink_400_400/0/1655438694013?e=1663804800&v=beta&t=SpCFjzY5ijuae8856L1fmo7ntVTpZ0o9d3zDkCVnrtY" alt="Profile photo"/>
   </div>
 </div>
-<div class="col-md-6 offset-md-2">
+<div class="col-lg-6 col-sm-12">
+  <br>
     <h1>Hi! I'm Diana</h1>
     <h2>A web technology enthusiast who loves to <em>create</em></h2>
 </div>
@@ -160,7 +161,7 @@ Studied specialised disciplines such as photography, graphic design, web design,
     </div>
 
 
-        <div class ="col-lg-2 col-sm-12">
+        <div class ="col-lg-2 col-sm-6">
           
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/800px-Google_%22G%22_Logo.svg.png">
       <p> Digital Marketing </p>
@@ -175,16 +176,16 @@ Studied specialised disciplines such as photography, graphic design, web design,
 
 <div class="container">
    <div class="left-content">
-     <p><b>November 2021-Present </b><br> Webiko.eu - Founder and developer</p>
-     <p><b>January-December 2017</b><br> Team.Blue - Migration engineer</p>
-     <p><b>June 2015-December 2016 </b><br> Paragon Internet Group - Senior Technical Support Engineer</p>
-     <p><b>June 2014-Jully 2015</b><br>Paragon Internet Group - Technical Concierge & Support Level 1</p>
+      <p>November 2021-Present <br> Webiko.eu - Founder and developer</p>
+      <p>January-December 2017<br> Team.Blue - Migration engineer</p>
+      <p>June 2015-December 2016 <br> Paragon Internet Group - Senior Technical Support Engineer</p>
+      <p>June 2014-Jully 2015<br>Paragon Internet Group - Technical Concierge & Support Level 1</p>
    </div>
    <div class="right-content">
-     <p><b>October 2021-Present </b><br> Team.Blue - Platform engineer trainee</p>
-     <p><b>December 2017-Present </b><br> Team.Blue - Team Lead migration team</p>
-     <p><b>November 2016-2017</b><br> Progressbg.net - Part-time lecturer for the following classes: Front End Development, Content Management Systems,  Computer graphics and design</p>
-     <p><b>August 2015-May 2016 </b><br> Paragon Internet Group - Team Leader of Technical Concierge Team</p>
+      <p>October 2021-Present <br> Team.Blue - Platform engineer trainee</p>
+      <p>December 2017-Present <br> Team.Blue - Team Lead migration team</p>
+      <p>November 2016-2017<br> Progressbg.net - Part-time lecturer for the following classes: Front End Development, Content Management Systems,  Computer graphics and design</p>
+      <p>August 2015-May 2016 <br> Paragon Internet Group - Team Leader of Technical Concierge Team</p>
    </div>
 
 </div>
