--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <h2>Skills </h2>
     <hr/>
       
-  <div class="row offset-sm-2">
+  <div class="row offset-lg-1 offset-md-2">
     <div class ="col-lg-3 col-sm-6">
       
       <img  src="images/browser.png">
