--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
   <title>Diana Edreva | CV </title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
@@ -206,8 +207,12 @@ Studied specialised disciplines such as photography, graphic design, web design,
 
   <a class="btn btn-info" href="https://github.com/dnightroad" role="button"><img src="https://cdn-icons-png.flaticon.com/512/25/25231.png?w=360" width="20px"> </a> 
     <a class="btn btn-info" href="https://replit.com/@DianaIvanova1" role="button"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Repl.it_logo.svg/800px-Repl.it_logo.svg.png" width="20px"> </a> 
+<div></div>
+<hr>
 
+<br><br>
 <div id="spacer"></div>
+
 </div>
 
 <a id="back-to-top" href="#" class="btn btn-lg back_to_top" role="button"> <div class="backbutntop"> Go back up?</div><img src="https://freepngimg.com/save/83006-square-angle-comics-balloon-book-speech-comic/800x677" width="80px;"></img></a>
