--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ Studied specialised disciplines such as photography, graphic design, web design,
 
 <div class="container">
    <div class="left-content">
-      <p class="workhis"><b>November 2021-Present </b><br> Awesome web dev projects for non-profits</p>
+      <p class="workhis"><b>November 2021-Present </b><br> Cool web dev projects - check my Github</p>
       <p class="workhis"><b>January-December 2017</b><br> Team.Blue - Migration engineer</p>
       <p class="workhis"><b>June 2015-December 2016 </b><br> Paragon Internet Group - Senior Technical Support Engineer</p>
       <p class="workhis"><b>June 2014-Jully 2015</b><br> Paragon Internet Group - Technical Concierge & Support Level 1</p>
