--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   </div>
 <div class="col-lg-5 col-sm-12">
   <div class="p-3 mb-3 rounded">
-    <img id="profile" src="https://media-exp1.licdn.com/dms/image/C4E03AQGXBAJUkipkSg/profile-displayphoto-shrink_400_400/0/1655438694013?e=1663804800&v=beta&t=SpCFjzY5ijuae8856L1fmo7ntVTpZ0o9d3zDkCVnrtY" alt="Profile photo"/>
+    <img id="profile" src="https://avatars.githubusercontent.com/u/85787930?v=4" alt="Profile photo"/>
   </div>
 </div>
 <div class="col-lg-6 col-sm-12">
