--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ Studied specialised disciplines such as photography, graphic design, web design,
 
   <h4>You can always send me an email or find me at my social accounts </h4>
 <br>
-  <a class="btn btn-info" href="mailto:diana@nightroadsites.com" role="button">Send me an email!</a>
+  <a class="btn btn-info" href="mailto:diana.edreva.nightroadsites@gmail.com" role="button">Send me an email!</a>
 
   <a class="btn btn-info " href="https://www.linkedin.com/in/diana-edreva-192762102/" role="button"> <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/LinkedIn_icon_circle.svg/800px-LinkedIn_icon_circle.svg.png" width="20px"> </img></a>
 
