--- a/index.html
+++ b/index.html
@@ -166,6 +166,9 @@ Studied specialised disciplines such as photography, graphic design, web design,
 
       <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/800px-Google_%22G%22_Logo.svg.png">
       <p> Digital Marketing </p>
+    <div class ="col-lg-2 col-sm-6">
+    <div data-iframe-width="150" data-iframe-height="270" data-share-badge-id="2e0ccd12-a458-4871-8ebd-a8085c796a55" data-share-badge-host="https://www.credly.com"></div><script type="text/javascript" async src="//cdn.credly.com/assets/utilities/embed.js"></script>
+       <p>Google Cybersecurity </p>
     </div>
 
   </div>
